--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -166,13 +166,14 @@
        " \"Hi Meryl, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greet_employees()"
+    "greetings = greet_employees()\n",
+    "greetings"
    ]
   },
   {
