--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -161,19 +161,17 @@
     {
      "data": {
       "text/plain": [
-       "[\"Hi Steven, I'm so glad to be working with you!\",\n",
-       " \"Hi Jan, I'm so glad to be working with you!\",\n",
-       " \"Hi Meryl, I'm so glad to be working with you!\"]"
+       "\"Hi Steven, I'm so glad to be working with you!\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "greetings = greet_employees()\n",
-    "[]"
+    "greetings[0]"
    ]
   },
   {
