automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,26 +153,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"Hi Steven, I'm so glad to be working with you!\""
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"Hi Steven, I'm so glad to be working with you!\", \"Hi Jan, I'm so glad to be working with you!\", \"Hi Meryl, I'm so glad to be working with you!\"]\n",
+      "[\"Hi Steven, I'm so glad to be working with you!\", \"Hi Jan, I'm so glad to be working with you!\", \"Hi Meryl, I'm so glad to be working with you!\"]\n",
+      "[\"Hi Steven, I'm so glad to be working with you!\", \"Hi Jan, I'm so glad to be working with you!\", \"Hi Meryl, I'm so glad to be working with you!\"]\n"
+     ]
     }
    ],
    "source": [
     "greetings = greet_employees()\n",
     "for i in new_employees:\n",
-    "    print(greetings"
+    "    print(greetings)"
    ]
   },
   {
