automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,8 @@
    ],
    "source": [
     "greetings = greet_employees()\n",
-    "print(greetings)"
+    "for i in new_employees:\n",
+    "    print(greetings[i])"
    ]
   },
   {
