--- a/index.ipynb
+++ b/index.ipynb
@@ -190,26 +190,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"Hi Steven, I'm so glad to be working with you!\",\n",
-       " \"Hi Jan, I'm so glad to be working with you!\",\n",
-       " \"Hi Meryl, I'm so glad to be working with you!\"]"
+       "[\"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Joe, I'm so glad to be working with you!\",\n",
+       " \"Hi Avi, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "new_employees = ['Jan', 'Joe', 'Avi']\n",
-    "#greet_employees()\n",
-    "greetings"
+    "greet_employees()\n",
+    "#greetings"
    ]
   },
   {
